# linphone

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  gtk+-2.22.1.filelist  index.html  linphone-deps.filelist  params.json
autom4te.cache/: output.0  requests  traces.0  traces.1
console/: Makefile.in
coreapi/: CMakeLists.txt  Makefile.am  Makefile.in  linphonecall.c  linphonecore.c  lpconfig.c  lpconfig.h  private.h  ringplayer.c  ringplayer.h
coreapi/help/: Makefile.in
gtk/: Makefile.am  Makefile.in  audio_assistant.c  buddylookup.c  buddylookup.ui  call_logs.ui  call_statistics.ui  calllogs.c  chat.c  conference.c  config-uri.ui  contact.ui  dscp_settings.ui  friendlist.c  incall_view.c  ldap.ui  linphone.h  main.c  main.ui  p2pwizard.ui  parameters.ui  password.ui  setupwizard.c  sip_account.ui  status_icon.c  tunnel_config.ui  videowindow.c  waiting.ui
include/: Makefile.in
m4/: Makefile.in
pixmaps/: .directory  CMakeLists.txt  Makefile.am  Makefile.in
pixmaps/hicolor/16x16/actions/: .directory
pixmaps/svg/: .directory
scripts/: Makefile.in
share/: Makefile.in
share/C/: Makefile.in
share/cs/: Makefile.in
share/fr/: Makefile.in
share/it/: Makefile.in
share/ja/: Makefile.in
share/xml/: Makefile.in
tester/: Makefile.in
tools/: Makefile.in
