pixmapdir=$(datadir)/pixmaps/linphone

pixmap_DATA= \
	hold_on.png hold_off.png \
	mic_muted.png mic_active.png \
	linphone.png linphone-banner.png \
	status-green.png \
	status-orange.png \
	status-red.png \
	status-offline.png \
	call.png \
	chat.png active_chat.png composing_chat.png composing_active_chat.png\
	contact-orange.png \
	startcall-green.png startcall-small.png stopcall-red.png stopcall-small.png addcall-green.png linphone.icns \
	contact_starred.png contact_unstarred.png \
	speaker.png \
	call_status_incoming.png call_status_outgoing.png \
	ok.png \
	dialer.png \
	notok.png


icons16actionsdir=$(datadir)/icons/hicolor/16x16/actions
icons24actionsdir=$(datadir)/icons/hicolor/24x24/actions
icons24statusdir=$(datadir)/icons/hicolor/24x24/status
icons24devicesdir=$(datadir)/icons/hicolor/24x24/devices
icons32actionsdir=$(datadir)/icons/hicolor/32x32/actions
icons48actionsdir=$(datadir)/icons/hicolor/48x48/actions
icons48appsdir=$(datadir)/icons/hicolor/48x48/apps
icons48statusdir=$(datadir)/icons/hicolor/48x48/status

icons16actions_DATA= \
	startcall-small.png \
	stopcall-small.png

icons24actions_DATA= \
	hold_on.png \
	hold_off.png \
	call.png \
	chat.png

icons24status_DATA= \
	mic_muted.png \
	mic_active.png \
	status-green.png \
	status-orange.png \
	status-red.png \
	status-offline.png \
	active_chat.png \
	composing_chat.png \
	composing_active_chat.png \
	contact-orange.png \
	call_status_incoming.png \
	call_status_outgoing.png

icons24devices_DATA= \
	speaker.png \
	dialer.png

icons32actions_DATA= \
	ok.png \
	notok.png
	
icons48actions_DATA= \
	startcall-green.png \
	stopcall-red.png \
	addcall-green.png

icons48apps_DATA= \
	linphone.png

icons48status_DATA= \
	contact_starred.png \
	contact_unstarred.png
	

EXTRA_DIST= \
	$(pixmap_DATA) \
	$(icons16actions_DATA) \
	$(icons24actions_DATA) \
	$(icons24status_DATA) \
	$(icons24devices_DATA) \
	$(icons32actions_DATA) \
	$(icons48actions_DATA) \
	$(icons48apps_DATA) \
	$(icons48status_DATA)
