pixmapdir=$(datadir)/pixmaps/linphone
pixmap_DATA= \
	linphone.png \
	linphone-banner.png

iconsdir=$(datadir)/icons/hicolor
actions16dir=$(iconsdir)/16x16/actions
actions24dir=$(iconsdir)/24x24/actions
devices24dir=$(iconsdir)/24x24/devices
status24dir=$(iconsdir)/24x24/status
actions32dir=$(iconsdir)/32x32/actions
actions48dir=$(iconsdir)/48x48/actions
status48dir=$(iconsdir)/48x48/status
apps48dir=$(iconsdir)/48x48/apps

actions16_DATA= hicolor/16x16/actions/*
actions24_DATA= hicolor/24x24/actions/*
status24_DATA= hicolor/24x24/status/*
devices24_DATA= hicolor/24x24/devices/*
actions32_DATA= hicolor/32x32/actions/*
actions48_DATA= hicolor/48x48/actions/*
status48_DATA= hicolor/48x48/status/*
apps48_DATA= hicolor/48x48/apps/*

EXTRA_DIST= \
	$(pixmap_DATA) \
	hicolor/*

